--- a/week4/templates/homePage.html
+++ b/week4/templates/homePage.html
@@ -30,7 +30,7 @@
 
     <div class="titleSection">計算正整數的平方</div>
 
-    <form action="/square" id="square" method="post">
+    <form id="square" method="post">
         <label for="integer">正整數</label>
         <input type="text" id="integerID" name="integer" value="">
         <br>
